[workspace]
members = ["boot", "mikanos_usb"]

[package]
name = "sabios"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
bit_field = "0.10.1"
bootloader = "0.10.4"
conquer-once = { version = "0.3.2", default-features = false }
mikanos_usb = { path = "./mikanos_usb" }
num-traits = { version = "0.2.14", default-features = false }
spin = "0.9.0"
static_assertions = "1.1.0"
x86_64 = "0.14.2"

[package.metadata.bootloader]
map-physical-memory = true
