[workspace]
members = ["boot", "mikanos_usb"]

[package]
name = "sabios"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"
build = "build.rs"
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
bit_field = "0.10.1"
bootloader = "0.10.5"
conquer-once = { version = "0.3.2", default-features = false }
crossbeam-queue = { version = "0.3.1", default-features = false, features = ["alloc"] }
custom_debug_derive = "0.5.0"
enumflags2 = "0.7.1"
futures-util = { version = "0.3.15", default-features = false, features = ["alloc", "async-await-macro"] }
linked_list_allocator = "0.9.0"
mikanos_usb = { path = "./mikanos_usb" }
num-traits = { version = "0.2.14", default-features = false }
spin = "0.9.0"
static_assertions = "1.1.0"
volatile = "0.4.4"
x86_64 = "0.14.3"

[package.metadata.bootloader]
map-physical-memory = true
