[workspace]
members = ["boot", "mikanos_usb"]

[package]
name = "sabios"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"
build = "build.rs"
resolver = "2"

# https://github.com/rust-lang/cargo/issues/7359
# [profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"
debug = true

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
bit_field = "0.10.1"
bootloader = "0.10.6"
conquer-once = { version = "0.3.2", default-features = false }
crossbeam-queue = { version = "0.3.2", default-features = false, features = ["alloc"] }
custom_debug_derive = "0.5.0"
derivative = { version = "2.2.0", features = ["use_core"] }
enumflags2 = "0.7.1"
futures-util = { version = "0.3.15", default-features = false, features = ["alloc", "async-await-macro"] }
linked_list_allocator = "0.9.0"
mikanos_usb = { path = "./mikanos_usb" }
num-traits = { version = "0.2.14", default-features = false }
pin-project = "1.0.7"
spin = "0.9.0"
static_assertions = "1.1.0"
uart_16550 = "0.2.14"
volatile = "0.4.4"
x86_64 = "0.14.3"

[package.metadata.bootloader]
map-physical-memory = true

