[package]
name = "mikanos_usb"
version = "0.1.0"
edition = "2018"
build = "build.rs"
links = "mikanos_usb"
resolver = "2"

[build-dependencies]
cc = "1.0.68"
flate2 = "1.0.20"
glob = "0.3.0"
reqwest = "0.11.4"
tar = "0.4.35"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }

[dependencies]
x86_64 = "0.14.3"
